fix: volumes array

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - '9005:9005'
     command: run:web
     volumes:
-      /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock
   worker:
     <<: *defaults
     command: run:worker
