--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "baseui": "^6.17.4",
     "bull": "^3.9.1",
     "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
@@ -50,13 +49,12 @@
     "ioredis": "^4.9.3",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
-    "logrocket": "^0.6.21",
     "morgan": "^1.9.1",
     "nanoid": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.0",
     "pg": "^7.11.0",
-    "probot": "^9.2.10",
-    "styletron-react": "^4.4.6"
+    "physical-cpu-count": "^2.0.0",
+    "probot": "^9.2.10"
   }
 }
