--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 x-defaults: &defaults
-  #restart: unless-stopped
+  restart: unless-stopped
   build: .
   depends_on:
     - redis
