--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev:redis": "redis-server",
     "dev": "run-p dev:*",
     "clear": "rimraf build",
-    "build:client": "parcel build --out-dir build/client --public-url ./ ./src/client/index.html",
+    "build:client": "parcel build --out-dir build/client --public-url https://cdn.a1motion.com/mural ./src/client/index.html",
     "build:hook": "cp -R ./src/hook ./build/hook",
     "build:worker": "cp -R ./src/worker ./build/worker",
     "build:server": "cp -R ./src/server ./build/server",
     "build": "run-s clear build:*",
+    "deploy": "node scripts/build.js",
     "run:web": "node ./build/server",
     "run:worker": "node ./build/worker"
   },
@@ -19,18 +20,22 @@
     "@babel/core": "^7.0.0-0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "aws-sdk": "^2.458.0",
     "eslint": "^5.16.0",
     "eslint-config-a1motion": "^1.1.3",
     "ky": "^0.11.0",
     "linaria": "^1.3.1",
+    "mime": "^2.4.3",
     "nodemon": "^1.19.0",
     "parcel-bundler": "^1.12.3",
+    "parcel-plugin-linaria": "^0.1.1",
     "react": ">= 16.4.0 < 17",
     "react-dom": ">= 16.4.0 < 17",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "rimraf": "2.6.3",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
     "smee-client": "^1.1.0"
   },
@@ -49,6 +54,7 @@
     "ioredis": "^4.9.3",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
+    "lru-cache": "^5.1.1",
     "morgan": "^1.9.1",
     "nanoid": "^2.0.1",
     "npm-run-all": "^4.1.5",
