--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev:client": "parcel --out-dir build/client ./src/client/index.html",
     "dev:worker": "nodemon --watch src/worker/ ./src/worker/index.js",
-    "dev:server": "nodemon --watch src/server/ --watch src/hook/ ./src/server/index.js",
+    "dev:server": "nodemon -e js,gql --watch src/server/ --watch src/hook/ ./src/server/index.js",
     "dev:redis": "redis-server",
     "dev": "run-p dev:*",
     "clear": "rimraf build",
@@ -48,9 +48,11 @@
     "dotenv": "^8.0.0",
     "execa": "sindresorhus/execa",
     "express": "^4.16.4",
+    "express-graphql": "^0.8.0",
     "express-session": "^1.16.1",
     "gh-got": "^8.1.0",
     "got": "^9.6.0",
+    "graphql": "^14.3.0",
     "ioredis": "^4.9.3",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
