--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "execa": "sindresorhus/execa",
     "express": "^4.16.4",
