--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "build": "run-s clear build:*",
     "deploy": "node -r dotenv/config scripts/build.js",
     "run:web": "node ./build/server",
-    "run:worker": "node ./build/worker"
+    "run:worker": "node ./build/worker",
+    "test": "ava --verbose",
+    "lint": "eslint 'src/**/*.js'"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "ava": "^1.4.1",
     "eslint": "^5.16.0",
     "eslint-config-a1motion": "^1.1.3",
     "ky": "^0.11.0",
