--- a/package.json
+++ b/package.json
@@ -16,21 +16,27 @@
     "run:web": "node ./build/server",
     "run:worker": "node ./build/worker",
     "test": "ava --verbose",
-    "lint": "eslint 'src/**/*.js'"
+    "lint": "eslint --format=pretty 'src/**/*.js'"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "ava": "^2.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-a1motion": "^1.2.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.12.1",
+    "eslint-config-a1motion": "2.0.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-formatter-pretty": "^2.1.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "ky": "^0.11.0",
     "linaria": "^1.3.1",
     "mime": "^2.4.3",
     "nodemon": "^1.19.1",
     "parcel-bundler": "^1.12.3",
     "parcel-plugin-linaria": "^0.1.1",
+    "prettier": "^1.17.1",
     "react": ">= 16.4.0 < 17",
     "react-dom": ">= 16.4.0 < 17",
     "react-redux": "^7.0.3",
