--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "passport": "^0.4.0",
     "pg": "^7.11.0",
     "physical-cpu-count": "^2.0.0",
-    "probot": "^9.2.13"
+    "probot": "^9.2.13",
+    "react-helmet": "^5.2.1",
+    "react-textarea-autosize": "^7.1.0"
   },
   "ava": {
     "babel": {
