--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "webpack-bundle-analyzer": "^3.3.2"
   },
   "dependencies": {
-    "@a1motion/color-code": "^1.0.0",
+    "@a1motion/color-code": "^1.1.0",
+    "@hot-loader/react-dom": "^16.8.6",
     "aws-sdk": "^2.480.0",
     "babel-polyfill": "^6.26.0",
     "bull": "^3.10.0",
@@ -81,6 +82,7 @@
     "physical-cpu-count": "^2.0.0",
     "probot": "^9.2.15",
     "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.12.6",
     "react-textarea-autosize": "^7.1.0"
   },
   "ava": {
