--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
-    "execa": "sindresorhus/execa",
+    "execa": "^2.0.3",
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "express-session": "^1.16.2",
