--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@a1motion/color-code": "^1.1.2",
     "@hot-loader/react-dom": "^16.8.6",
+    "@sentry/node": "^5.6.1",
     "aws-sdk": "^2.493.0",
     "babel-polyfill": "^6.26.0",
     "bull": "^3.10.0",
