--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "lint": "eslint --format=pretty '**/*.js'"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
     "ava": "^2.2.0",
     "babel-eslint": "^10.0.2",
     "customize-cra": "^0.2.14",
@@ -35,8 +32,6 @@
     "linaria": "^1.3.1",
     "mime": "^2.4.4",
     "nodemon": "^1.19.1",
-    "parcel-bundler": "^1.12.3",
-    "parcel-plugin-linaria": "^0.1.1",
     "prettier": "^1.18.2",
     "react": ">= 16.4.0 < 17",
     "react-app-rewired": "^2.1.3",
@@ -49,14 +44,16 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "smee-client": "^1.1.0",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-bundle-analyzer": "^3.3.2",
+    "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.12.8",
+    "react-textarea-autosize": "^7.1.0",
+    "@hot-loader/react-dom": "^16.8.6"
   },
   "dependencies": {
     "@a1motion/color-code": "^1.1.2",
-    "@hot-loader/react-dom": "^16.8.6",
     "@sentry/node": "^5.6.1",
     "aws-sdk": "^2.493.0",
-    "babel-polyfill": "^6.26.0",
     "bull": "^3.10.0",
     "connect-redis": "^3.4.1",
     "cookie-parser": "^1.4.4",
@@ -81,10 +78,7 @@
     "passport": "^0.4.0",
     "pg": "^7.11.0",
     "physical-cpu-count": "^2.0.0",
-    "probot": "^9.2.19",
-    "react-helmet": "^5.2.1",
-    "react-hot-loader": "^4.12.8",
-    "react-textarea-autosize": "^7.1.0"
+    "probot": "^9.2.19"
   },
   "ava": {
     "babel": {
