--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint --format=pretty '**/*.js'"
   },
   "devDependencies": {
+    "@hot-loader/react-dom": "^16.8.6",
     "ava": "^2.2.0",
     "babel-eslint": "^10.0.2",
     "customize-cra": "^0.4.1",
@@ -33,22 +34,21 @@
     "mime": "^2.4.4",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
-    "react": ">= 16.4.0 < 17",
+    "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
-    "react-dom": ">= 16.4.0 < 17",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.12.10",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.4",
     "rimraf": "2.6.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "smee-client": "^1.1.0",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "react-helmet": "^5.2.1",
-    "react-hot-loader": "^4.12.10",
-    "react-textarea-autosize": "^7.1.0",
-    "@hot-loader/react-dom": "^16.8.6"
+    "webpack-bundle-analyzer": "^3.4.1"
   },
   "dependencies": {
     "@a1motion/color-code": "^1.1.2",
